objects/DMAPP__Account_Plan_Objective__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>DMAPP__DM_Account_Plan__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Due_Date__c</fullName>
        <description>Due Date</description>
        <inlineHelpText>The date you expect to achieve the Objective.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__IsCompleted__c</fullName>
        <description>IsCompleted is true if Status == &apos;Completed - Achieved&apos; OR Status == &apos;Completed - Not Achieved&apos;, false otherwise</description>
        <formula>ISPICKVAL(DMAPP__Status__c, &apos;Completed&apos;) || ISPICKVAL(DMAPP__Status__c, &apos;Cancelled&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IsCompleted is true if Status == &apos;Completed - Achieved&apos; OR Status == &apos;Completed - Not Achieved&apos;, false otherwise</inlineHelpText>
        <label>IsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__IsOverdue__c</fullName>
        <description>true if status != completed and due date &lt; today, false otherwise</description>
        <formula>NOT(DMAPP__IsCompleted__c) &amp;&amp; (DMAPP__Due_Date__c &lt; TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>true if status != completed and due date &lt; today, false otherwise</inlineHelpText>
        <label>IsOverdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Metric__c</fullName>
        <description>Metric</description>
        <inlineHelpText>The measurable metric(s) that will indicate you have achieved the Objective or the measurable results of achieving the Objective. For example, &quot;$5M in pipeline&quot;, or &quot;unlimited access to the SVP(include the names)&quot;, or &quot;$2M in revenue&quot;.</inlineHelpText>
        <label>Metric</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Objective_Description__c</fullName>
        <inlineHelpText>The value this objective delivers to others. How is this Objective relevant to the customer, or how is it relevant to the partner if this is a Partner Objective, or relevant to you if this is a Customer Success Objective.</inlineHelpText>
        <label>Objective Description</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Plan_Unit__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <inlineHelpText>From the drop down list, specify which Plan Unit this Objective is related to or if the Objective is for every Plan Unit.</inlineHelpText>
        <label>Plan Unit</label>
        <referenceTo>DMAPP__AM_Plan_Unit__c</referenceTo>
        <relationshipLabel>Objectives</relationshipLabel>
        <relationshipName>Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Priority__c</fullName>
        <description>Priority</description>
        <inlineHelpText>Priority</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy__c</fullName>
        <inlineHelpText>How you plan to achieve the objective. A description of your high level approach to achieving the Objective. For example, &quot;by leveraging relationships and references in the industry&quot;</inlineHelpText>
        <label>Strategy</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Subject__c</fullName>
        <description>Objective Subject</description>
        <inlineHelpText>Specify the Objective by providing a description of what you want to accomplish as it relates to the Objective Type. For example, &quot;grow the pipeline&quot;, or &quot;improve relationship with key players (be specific and use the names of the Key Players)&quot;, or &quot;close</inlineHelpText>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Type__c</fullName>
        <inlineHelpText>Using the drop down list, select what type of Objective you are adding.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Research</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove Barrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Objective</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Objective_Description__c</columns>
        <columns>DMAPP__Strategy__c</columns>
        <columns>DMAPP__Type__c</columns>
        <columns>DMAPP__Plan_Unit__c</columns>
        <columns>DMAPP__Account_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>